 *
 *
 * Copyright (c) 2007-2011 VCAD System Research Program, RIKEN. 
 * All rights reserved.
 *
 * Copyright (c) 2011-2013 Institute of Industrial Science, The University of Tokyo. 
 * All rights reserved.
 *
 * Copyright (c) 2012-2013 Advanced Institute for Computational Science, RIKEN. 
 * All rights reserved.
 *
 */


REVISION HISTORY
================

--------------------------
2013-10-12

- r1037 repalce IntervalManager.h from CIOlib [ver 1.4.6]
  - change integer type from int to unsigned int in IntervalManager
  - add getLastStep(), getLastTime() in IntervalManager
  - integrate isLastStep() and isLastTime() to isLast() and cahnge to public method
  - rewrite timing control by a new IntervalManager

--------------------------
2013-10-11

- r1036 change keyword from 'Normal' to 'OrientationVector'

- r1035 update for CIOlib-1.3.8 [ver 1.4.5]
  - move dfiinfo.h from FB/ to PLOT3D/
  - delete extra methods in ffv_Restart.C
  - update for CIOlib-1.3.8

--------------------------
2013-10-06

- r1034 modify Algorithm for Binary [ver 1.4.4]
  - Replace cell face mask by Neumann flag >> pvec_muscl_(), update_vec_(), divergence_()
  - modify encPbitIBC(), encPbit_N() so that these methods use boundary ID information.
  - remove InnerVBC(), vibc_drchlt_(), vibc_outflow_(), assignVelocity(), assignTemp() due to change algorithm

--------------------------
2013-10-05

- r1033 exclude PLOT3D output [ver 1.4.3]
  - MPIinit is called at firstline in main.C because Intel MPI tells error message
  - PLOT3D functions are expired and will be supported by a new converter
  - dfi.h/C is replaced by CIOlib
  - temporally excludes compilation of PLOT3D and Util_Layout
  - combsph supports sph and avs

--------------------------
2013-10-03

- r1032 modify for intel MPI [ver 1.4.2]
  - include mpi.h before stdio.h to suppress error message #error "SEEK_SET is #defined but must not be for the C++ binding of MPI"
  - remove __ARCH_BG
  - add va_start to AC_CHECK_FUNCS([])
