@@ -17,7 +17,9 @@
 RELEASE NOTE
 ============
 
-
+Ver 1.3.9   2013-10-12
+  - InterevalManagerクラスをCIOlibから移動
+  
 Ver 1.3.8   2013-10-11
   - PLOT3D関連のコードを削除
   - Interval_Manager >> cio_IOnterval_Mngrに置換
